--- a/index.html
+++ b/index.html
@@ -451,14 +451,18 @@
 
         <!-- HISTORY VIEW (hidden by default) -->
         <div id="body-history-view" style="display: none; margin-top: 20px;">
-            <div id="history-stats-summary" style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 20px;">
-                <div style="background: #0a0a0a; border: 1px solid #222; padding: 15px; border-radius: 8px; text-align: center;">
-                    <span style="display: block; font-size: 0.7rem; color: var(--dim); font-family: 'Rajdhani';">TOTAL_WORKOUTS</span>
-                    <span id="stat-total-workouts" style="font-size: 1.5rem; font-family: 'JetBrains Mono'; color: #00ff41;">0</span>
+            <div id="history-stats-summary" style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-bottom: 20px;">
+                <div style="background: #0a0a0a; border: 1px solid #222; padding: 12px 5px; border-radius: 8px; text-align: center;">
+                    <span style="display: block; font-size: 0.6rem; color: var(--dim); font-family: 'Rajdhani';">SESSIONS</span>
+                    <span id="stat-total-workouts" style="font-size: 1.2rem; font-family: 'JetBrains Mono'; color: #fff;">0</span>
                 </div>
-                <div style="background: #0a0a0a; border: 1px solid #222; padding: 15px; border-radius: 8px; text-align: center;">
-                    <span style="display: block; font-size: 0.7rem; color: var(--dim); font-family: 'Rajdhani';">AVG_MOOD</span>
-                    <span id="stat-avg-mood" style="font-size: 1.5rem; font-family: 'JetBrains Mono'; color: #00d4ff;">0</span>
+                <div style="background: #0a0a0a; border: 1px solid #222; padding: 12px 5px; border-radius: 8px; text-align: center;">
+                    <span style="display: block; font-size: 0.6rem; color: var(--dim); font-family: 'Rajdhani';">AVG_TIME</span>
+                    <span id="stat-avg-time" style="font-size: 1.2rem; font-family: 'JetBrains Mono'; color: #00d4ff;">0m</span>
+                </div>
+                <div style="background: #0a0a0a; border: 1px solid #222; padding: 12px 5px; border-radius: 8px; text-align: center;">
+                    <span style="display: block; font-size: 0.6rem; color: var(--dim); font-family: 'Rajdhani';">AVG_MOOD</span>
+                    <span id="stat-avg-mood" style="font-size: 1.2rem; font-family: 'JetBrains Mono'; color: #00ff41;">0</span>
                 </div>
             </div>
 
