--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div style="background: #0a0a0a; border: 1px solid #222; padding: 20px; border-radius: 8px;">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <h3 style="font-family: 'Rajdhani'; font-size: 0.9rem; color: var(--dim); margin: 0; letter-spacing: 1px;">LAST_SESSION</h3>
-                    <div onclick="showSection('body-history')" style="cursor: pointer; color: #555; transition: 0.3s;" onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='#555'">
+                    <div onclick="switchBodyView('history')" style="cursor: pointer; color: #555; transition: 0.3s;" onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='#555'">
                         <i data-lucide="calendar-days" style="width: 20px; height: 20px;"></i>
                     </div>
                 </div>
