--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                             <span id="body-streak">0</span>
                             <span style="font-size: 1rem;">🔥</span>
                         </div>
-                        <div style="font-size: 0.7rem; color: #666; margin-top: 3px;">giorni consecutivi</div>
+                        <div style="font-size: 0.7rem; color: #666; margin-top: 3px;">settimane consecutive</div>
                     </div>
 
                 </div>
