--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             <div id="mood-selector" style="display: flex; justify-content: space-between; gap: 5px;">
                 <button onclick="selectWorkoutMood(-2, this)" style="flex:1; background:#111; border:1px solid #333; padding:10px; border-radius:4px; font-size:1.2rem; cursor:pointer;">😫</button>
                 <button onclick="selectWorkoutMood(-1, this)" style="flex:1; background:#111; border:1px solid #333; padding:10px; border-radius:4px; font-size:1.2rem; cursor:pointer;">😐</button>
-                <button onclick="selectWorkoutMood(0, this)" style="flex:1; background:#111; border:1px solid #333; padding:10px; border-radius:4px; font-size:1.2rem; cursor:pointer; border-color:#00ff41;">😊</button>
+                <button onclick="selectWorkoutMood(0, this)" style="flex:1; background:#111; border:1px solid #333; padding:10px; border-radius:4px; font-size:1.2rem; cursor:pointer;">😊</button>
                 <button onclick="selectWorkoutMood(1, this)" style="flex:1; background:#111; border:1px solid #333; padding:10px; border-radius:4px; font-size:1.2rem; cursor:pointer;">😄</button>
                 <button onclick="selectWorkoutMood(2, this)" style="flex:1; background:#111; border:1px solid #333; padding:10px; border-radius:4px; font-size:1.2rem; cursor:pointer;">🔥</button>
             </div>
@@ -533,7 +533,7 @@
             <div style="font-size: 10px; color: var(--dim); margin-bottom: 10px; letter-spacing: 1px;">ENERGY_LEVEL</div>
             <div id="energy-selector" style="display: flex; gap: 10px;">
                 <button onclick="selectWorkoutEnergy('low', this)" style="flex:1; background:#111; border:1px solid #333; color:#666; padding:8px; border-radius:4px; font-family:'Rajdhani'; font-size:0.8rem; cursor:pointer;">LOW</button>
-                <button onclick="selectWorkoutEnergy('mid', this)" style="flex:1; background:#111; border:1px solid #333; color:#666; padding:8px; border-radius:4px; font-family:'Rajdhani'; font-size:0.8rem; cursor:pointer; border-color:#ff9500; color:#ff9500;">MID</button>
+                <button onclick="selectWorkoutEnergy('mid', this)" style="flex:1; background:#111; border:1px solid #333; color:#666; padding:8px; border-radius:4px; font-family:'Rajdhani'; font-size:0.8rem; cursor:pointer;">MID</button>
                 <button onclick="selectWorkoutEnergy('high', this)" style="flex:1; background:#111; border:1px solid #333; color:#666; padding:8px; border-radius:4px; font-family:'Rajdhani'; font-size:0.8rem; cursor:pointer;">HIGH</button>
             </div>
         </div>
