--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
     </main>
 
-    <div id="body-coach-bubble" class="analyst-bubble-body" style="display:none; position:fixed; bottom:100px; right:20px; /* stesso stile di analyst-bubble */">
+    <div id="body-coach-bubble" class="body-bubble" style="display:none; position:fixed; bottom:100px; right:20px; /* stesso stile di analyst-bubble */">
     <div id="body-coach-text"></div>
     </div>
 
