--- a/index.html
+++ b/index.html
@@ -474,10 +474,12 @@
 
     </main>
 
-    <div id="body-coach-bubble" class="body-bubble" style="display:none; position:fixed; bottom:100px; right:20px; /* stesso stile di analyst-bubble */">
-    <div id="body-coach-text"></div>
+    <div id="body-coach-bubble">
+        <div style="font-size:9px; color:#00ff41; letter-spacing:2px; margin-bottom:12px;">
+            COACH_AI // ONLINE
+        </div>
+        <div id="body-coach-text"></div>
     </div>
-
     <!-- BOTTOM NAV -->
     <div class="bottom-nav">
         
